@@ -54,6 +54,11 @@
     </dependency>
     <dependency>
       <groupId>org.openrdf.sesame</groupId>
+      <artifactId>sesame-rio-nquads</artifactId>
+      <version>${sesame.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.openrdf.sesame</groupId>
       <artifactId>sesame-rio-ntriples</artifactId>
       <version>${sesame.version}</version>
     </dependency>
